--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,24 +143,16 @@
      "output_type": "stream",
      "text": [
       "pyth\n",
-      "4\n",
       "c\n",
-      "1\n",
       "val\n",
-      "3\n",
       "maths\n",
-      "5\n",
-      "science\n",
-      "7\n"
+      "science\n"
      ]
     }
    ],
    "source": [
-    "var2 = [\"pyth\", \"c\", \"val\", \"maths\", \"science\"]\n",
-    "\n",
-    "for val in var2:\n",
-    "    print(val)\n",
-    "    print(len(val))"
+    "for i in var2:\n",
+    "    print(i)"
    ]
   },
   {
@@ -450,24 +442,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c\n"
-     ]
-    }
-   ],
-   "source": [
-    "Li1 = {5:\"c\",6:\"cpp\",7:\"java\",4:\"groovy\",10:\"gg\",20:\"go\"}\n",
-    "print(Li1[5])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -500,24 +474,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m\n",
-      "a\n",
-      "t\n",
-      "h\n",
-      "e\n",
-      "m\n",
-      "a\n",
-      "t\n",
-      "i\n",
+      "s\n",
       "c\n",
-      "s\n"
+      "i\n",
+      "t\n",
+      "a\n",
+      "m\n",
+      "e\n",
+      "h\n",
+      "t\n",
+      "a\n",
+      "m\n"
      ]
     }
    ],
@@ -525,66 +499,6 @@
     "val = \"mathematics\"\n",
     "\n",
     "for i in val:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s\n",
-      "c\n",
-      "i\n",
-      "t\n",
-      "a\n",
-      "m\n",
-      "e\n",
-      "h\n",
-      "t\n",
-      "a\n",
-      "m\n"
-     ]
-    }
-   ],
-   "source": [
-    "val = \"mathematics\"\n",
-    "\n",
-    "for i in val[::-1]:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s\n",
-      "c\n",
-      "i\n",
-      "t\n",
-      "a\n",
-      "m\n",
-      "e\n",
-      "h\n",
-      "t\n",
-      "a\n",
-      "m\n"
-     ]
-    }
-   ],
-   "source": [
-    "val = \"mathematics\"\n",
-    "\n",
-    "for i in reversed(val):\n",
     "    print(i)"
    ]
   },
@@ -802,36 +716,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 : NOT A Multiple of ELEMENT\n",
-      "2 : NOT A Multiple of ELEMENT\n",
-      "3 : NOT A Multiple of ELEMENT\n",
-      "5 : NOT A Multiple of ELEMENT\n",
-      "6 : NOT A Multiple of ELEMENT\n",
-      "9 : NOT A Multiple of ELEMENT\n",
-      "10 : NOT A Multiple of ELEMENT\n",
-      "11 : NOT A Multiple of ELEMENT\n",
-      "13 : NOT A Multiple of ELEMENT\n",
-      "15 : NOT A Multiple of ELEMENT\n",
-      "17 : NOT A Multiple of ELEMENT\n",
-      "18 : NOT A Multiple of ELEMENT\n",
-      "19 : NOT A Multiple of ELEMENT\n"
+      "1 : NOT A Multiple of THREE\n",
+      "2 : NOT A Multiple of THREE\n",
+      "3 : NOT A Multiple of THREE\n",
+      "4 : NOT A Multiple of THREE\n",
+      "5 : NOT A Multiple of THREE\n",
+      "6 : NOT A Multiple of THREE\n",
+      "8 : NOT A Multiple of THREE\n",
+      "9 : NOT A Multiple of THREE\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1,20):\n",
-    "    if i % 7 == 0 or i%4 == 0:\n",
+    "for i in range(1,10):\n",
+    "    if i % 7 == 0:\n",
     "        continue #temp stop to the loop (skip current iteration go to next iteration)\n",
-    "        print(f'{i} : Multiple of ELEMENT')\n",
+    "        print(f'{i} : Multiple of THREE')\n",
     "    else:\n",
-    "        print(f'{i} : NOT A Multiple of ELEMENT')"
+    "        print(f'{i} : NOT A Multiple of THREE')"
    ]
   },
   {
@@ -927,39 +836,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 : NOT A Multiple of THREE\n",
-      "2 : NOT A Multiple of THREE\n",
-      "3 : NOT A Multiple of THREE\n",
-      "4 : NOT A Multiple of THREE\n",
-      "5 : NOT A Multiple of THREE\n",
-      "6 : NOT A Multiple of THREE\n",
-      "7 : NOT A Multiple of THREE\n",
-      "8 : NOT A Multiple of THREE\n",
-      "9 : NOT A Multiple of THREE\n",
-      "Loop executed completely\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1,10):\n",
-    "    if i % 11 == 0:\n",
-    "        break #permanent stop to the loop\n",
-    "        print(f'{i} : Multiple of THREE')\n",
-    "    else:\n",
-    "        print(f'{i} : NOT A Multiple of THREE')\n",
-    "else:\n",
-    "    print(\"Loop executed completely\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -1021,6 +897,312 @@
     "        print(f'{i} : NOT A Multiple of THREE')\n",
     "else:\n",
     "    print(\"Loop executed completely\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#while with boolean (condition)\n",
+    "#break continue pass\n",
+    "#while else\n",
+    "#while with variable\n",
+    "#while with True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 10\n",
+      "The value of a is 9\n",
+      "The value of a is 8\n",
+      "The value of a is 7\n",
+      "The value of a is 6\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a > 5:\n",
+    "    print(f\"The value of a is {a}\")\n",
+    "    a = a - 1 #infinite loop\n",
+    "\n",
+    "print(\"main\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 10\n",
+      "The value of a is 9\n",
+      "The value of a is 8\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a > 5:\n",
+    "    if a %7 == 0:\n",
+    "        break\n",
+    "    print(f\"The value of a is {a}\")\n",
+    "    a = a - 1\n",
+    "    \n",
+    "#infinite loop\n",
+    "print(\"main\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 9\n",
+      "The value of a is 8\n",
+      "The value of a is 6\n",
+      "The value of a is 5\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a > 5:\n",
+    "    a = a - 1\n",
+    "    if a %7 == 0:\n",
+    "        continue\n",
+    "    print(f\"The value of a is {a}\")\n",
+    "    \n",
+    "#infinite loop\n",
+    "print(\"main\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 4\n",
+      "The value of a is 5\n",
+      "The value of a is 6\n",
+      "The value of a is 7\n",
+      "The value of a is 10\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "Li = [3,4,5,6,7,10,11,12,13]\n",
+    "index = 0\n",
+    "value = 10\n",
+    "\n",
+    "while a in Li:\n",
+    "    index = index + 1\n",
+    "    print(f\"The value of a is {Li[index]}\")\n",
+    "    if value == Li[index]:\n",
+    "        break\n",
+    "    \n",
+    "#infinite loop\n",
+    "print(\"main\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = 0\n",
+    "while True:\n",
+    "    print(\"Hello world\")\n",
+    "    index = index + 1\n",
+    "    if index == 10:\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "index = 0\n",
+    "\n",
+    "while a == True:\n",
+    "    print(\"Hello world\")\n",
+    "    index = index +1\n",
+    "    if index == 5:\n",
+    "        a = False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bool(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 1000\n",
+    "index = 0\n",
+    "while val:\n",
+    "    print(\"Hello world\")\n",
+    "    index = index + 1\n",
+    "    if index == 10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 10\n",
+      "The value of a is 9\n",
+      "The value of a is 8\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a > 5:\n",
+    "    if a %7 == 0:\n",
+    "        break\n",
+    "    print(f\"The value of a is {a}\")\n",
+    "    a = a - 1\n",
+    "else:\n",
+    "    print(\"All the iterations are completed\")\n",
+    "    \n",
+    "print(\"main\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is 10\n",
+      "The value of a is 9\n",
+      "The value of a is 8\n",
+      "The value of a is 7\n",
+      "The value of a is 6\n",
+      "All the iterations are completed\n",
+      "main\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "while a > 5:\n",
+    "    print(f\"The value of a is {a}\")\n",
+    "    a = a - 1\n",
+    "else:\n",
+    "    print(\"All the iterations are completed\")\n",
+    "    \n",
+    "print(\"main\")"
    ]
   },
   {
