--- a/Os sys modules.ipynb
+++ b/Os sys modules.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,12 @@
     }
    ],
    "source": [
-    "sys.exit()"
+    "sys.exit() #exit codes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "sys.version_info(major=3, minor=7, micro=6, releaselevel='final', serial=0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.argv"
+    "sys.argv #command line arguements"
    ]
   },
   {
@@ -116,7 +116,22 @@
    "outputs": [],
    "source": [
     "https://docs.python.org/3/library/sys.html\n",
-    "https://www.geeksforgeeks.org/python-sys-module/"
+    "https://www.geeksforgeeks.org/python-sys-module/\n",
+    "    \n",
+    "    \n",
+    "executing python program through command line from window\n",
+    "\n",
+    "https://docs.python.org/3/faq/windows.html\n",
+    "https://www.geeksforgeeks.org/how-to-run-a-python-script/\n",
+    "    \n",
+    "    \n",
+    "<python installed path> <python file>    \n",
+    "\n",
+    "https://www.geeksforgeeks.org/python-import-module-from-different-directory/\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
   }
  ],
