--- a/Os sys modules.ipynb
+++ b/Os sys modules.ipynb
@@ -131,7 +131,19 @@
     "    \n",
     "    \n",
     "    \n",
-    "    \n"
+    "    \n",
+    "sathya  ===> 25 - 3 - 1990\n",
+    "amar ====> 15-4-1990\n",
+    "abbu ===> 27 - 5 - 1990\n",
+    "parth === 12-12 -1990\n",
+    "\n",
+    "\n",
+    "\n",
+    "today date ?  ====>  date of birth  \n",
+    "\n",
+    "====> send mail\n",
+    "    \n",
+    "    "
    ]
   }
  ],
