--- a/Object Oriented Programming.ipynb
+++ b/Object Oriented Programming.ipynb
@@ -535,6 +535,8 @@
    "source": [
     "#Swiggy grocery #single inheritance\n",
     "\n",
+    "#parent child ===> child can access attributes and methods of parent\n",
+    "\n",
     "class swiggy:  \n",
     "    def software_usage_swiggy(self):\n",
     "        return \"This is swiggy software usage way\"\n",
@@ -707,6 +709,10 @@
    "outputs": [],
    "source": [
     "#Hybrid ===> combination of any two or more\n",
+    "\n",
+    "multiple + multi level\n",
+    "hierarchical + multiple\n",
+    "hierarchical + multilevel\n",
     "\n",
     "https://www.geeksforgeeks.org/types-of-inheritance-python/?ref=lbp"
    ]
